--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,11 @@
     "jquery": "1.9.1",
     "reset-css": "~2.0.2011012602",
     "fancybox": "~2.1.5",
-    "jquery-mousewheel": "~3.1.13"
+    "jquery-mousewheel": "~3.1.13",
+    "respond": "~1.4.2"
   },
   "devDependencies": {
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "respond": "~1.4.2"
   }
 }
